Game stops on jumpscare

--- a/code/css-modules/_simulator.scss
+++ b/code/css-modules/_simulator.scss
@@ -8,6 +8,7 @@
   "." auto
   "camera-button" min-content
   / 1fr;
+  position: relative;
 }
 
 #simulator{
